다시 블랭 추가

--- a/1.html
+++ b/1.html
@@ -16,6 +16,6 @@
   creating <u>web</u> pages</strong> and web apllications. Web browsers receive
    HTML documents from a web server or from local storage and render them into
   multimedia web pages.<br></p>
-  <img src="부르봉.jpg" width="300">
+  <img src="sddd.jpg" width="300">
 </body>
 </html>
